# wasm-genplus

./: .editorconfig  .eslintrc.js  .gitignore  .gitpod.Dockerfile  .gitpod.yml  CMakeLists.txt  README.md  package-lock.json  package.json  webpack.config.js  webpack.dev.js
.github/workflows/: emscripten.yml
dest/: genplus.wasm  genplus.wasm.map  index.bundle.js  index.html
docs/: genplus.wasm  index.bundle.js  index.html
src/main/c/: genplus.clist
src/main/c/core/: genesis.c  genesis.h  loadrom.c  mem68k.c  membnk.c  membnk.h  memz80.c  state.c  system.c  vdp_ctrl.c  vdp_render.h
src/main/c/core/cd_hw/: cd_cart.h  cdc.h  cdd.h  gfx.h  pcm.h  scd.h
src/main/c/wasm/: config.c  error.c  fileio.c  fileio.h  osd.h  wasm.c  wasm.h
src/main/html/: index.html
src/main/js/: genplus.js  genplus.wasm  index.js
